# swig-sample

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: image.hpp
src/: image.cpp  test.cpp
swig/: CMakeLists.txt  example.i  image.i
test/: test.py
