CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(example)
set(OPENCV_VERSION "" CACHE STRING "OpenCV Version to specify")

find_package(OpenCV ${OPENCV_VERSION} REQUIRED)
find_package(OpenCV-SWIG REQUIRED)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra -Wno-unused-parameter -fPIC")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
ADD_LIBRARY(image  SHARED src/image.cpp)
ADD_EXECUTABLE(${PROJECT_NAME} src/test.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} image ${OpenCV_LIBS})

set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/install CACHE PATH "" FORCE)
INSTALL(TARGETS ${PROJECT_NAME} image
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        PUBLIC_HEADER DESTINATION include
	INCLUDES DESTINATION include )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include DESTINATION ${CMAKE_INSTALL_PREFIX})
ADD_SUBDIRECTORY(swig)
#ADD_SUBDIRECTORY(sip)
